[tool.poetry]
name = "nynoflow"
version = "0.1.0"
description = "NynoFlow"
authors = ["nyno.ai <eitan@nyno.ai>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/nyno-ai/nynoflow"
repository = "https://github.com/nyno-ai/nynoflow"
documentation = "https://nynoflow.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/nyno-ai/nynoflow/releases"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^23.1.0"
openai = "^0.27.8"
gpt4all = "^1.0.8"
tiktoken = "^0.4.0"
sentencepiece = "^0.1.99"
tokenizers = "^0.13.3"
transformers = "^4.32.1"
pydantic = "^2.3.0"
jinja2 = "^3.1.2"
docstring-parser = "^0.15"
jsonschema = "^4.19.0"
cattrs = "^23.1.2"
boto3 = "^1.28.44"
boto3-stubs = {extras = ["s3"], version = "^1.28.44"}
google-cloud-storage = "^2.10.0"
types-google-cloud-ndb = "^2.2.0.0"
redis = "^5.0.0"
types-redis = "^4.6.0.5"
sqlalchemy = "^2.0.20"
sqlalchemy-stubs = "^0.4"

[tool.poetry.group.dev.dependencies]
Pygments = "^2.16.1"
black = "^23.7.0"
coverage = "^7.3.0"
darglint = "^1.8.1"
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.7.10"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
furo = "^2023.8.19"
isort = "^5.12.0"
mypy = "^1.5.1"
pep8-naming = "^0.13.3"
pre-commit = "^3.3.3"
pre-commit-hooks = "^4.4.0"
pytest = "^7.4.0"
pyupgrade = "^3.10.1"
safety = "^2.3.5"
sphinx = "^7.2.2"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^5.0.1"
xdoctest = "^1.1.1"
myst-parser = "^2.0.0"
nox-poetry = "^1.0.3"
typeguard = "^4.1.2"
pytest-mock = "^3.11.1"
python-dotenv = "^1.0.0"
sentencepiece = "^0.1.99"
transformers = "^4.32.1"
protobuf = "^4.24.2"
pytest-cov = "^4.1.0"
types-google-cloud-ndb = "^2.2.0.0"
fakeredis = "^2.18.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["nynoflow", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
disable_error_code = "no-untyped-call"
ignore_missing_imports = false
plugins = ["sqlmypy"]


[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
